# lybra

./: .gitignore  .npmignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml
0_control_plane/: README.md
0_control_plane/agents/: agent_capability_profile_schema.md  agent_instance_policy.md  agent_runtime_profile_schema.md  custom_agent_profile_authoring_protocol.md  dev_claude_runtime_profiles.md  heterogeneous_agent_role_catalog_protocol.md  instance_identity_generalization_protocol.md  model_routing_policy.md  model_tier_registry.yaml  runtime_profile_policy.md
0_control_plane/board/: adapter_dry_run_revalidation_policy.md  adapter_error_mapping.md  adapter_invocation_model.md  ai_assisted_task_authoring_board_live_byo_llm_protocol.md  ai_assisted_task_authoring_board_surface_protocol.md  api_contract.md  api_endpoints.md  api_response_schema.md  board_design_notes.md  board_file_mapping.md  board_v0_design.md  board_views.md  controlled_execute_contract.md  copy_task_context_spec.md  custom_agent_profile_board_surface_protocol.md  dry_run_token_contract.md  execute_allowed_operations.md  execute_revalidation_policy.md  local_adapter_boundary.md  mutation_safety_policy.md  needs_owner_rules.md  owner_approval_evidence_protocol.md  owner_decision_record_protocol.md  (+4 more)
3_context_bundles/: README.md  base_schema.md
config/: aipos.example.yaml
docs/: index.html  mcp-agent-setup.md  release_discipline.md  start.html  v1_acceptance_runbook.md  v1_disclosure.md  v1_macos_track2_exercise.md  v1_release_macos_runbook.md
(+322 files in other folders)
